<resources>
    <string name="app_name">News App</string>
    <string name="image_description">Image Description</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all"><![CDATA[See all ->]]></string>
    <string name="business">Business</string>
    <string name="filter">Filter</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="recommended">Recommended</string>
    <string name="latest">Latest</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="save">Save</string>
    <string name="default_news_content">No content from the news API. To see the news please </string>
</resources>